--- a/css/webcall.css
+++ b/css/webcall.css
@@ -9,15 +9,15 @@
 	color: white;
 	display: inline-block;
 	text-decoration: none;
-	width: 125px;
+	width: 130px;
 	height: 48px;
 }
 
-#call {
+#startCall {
 	background-color: #4CAF50;
 }
 
-#endcall {
+#endCall {
 	background-color:#f44336;
 }
 
@@ -33,4 +33,9 @@
 #container {
 	margin: 10px;
 	padding: 10px;
+}
+
+#remoteVideo {
+	margin: 2px;
+	padding: 15px 32px;
 }
