--- a/css/webcall.css
+++ b/css/webcall.css
@@ -1,6 +1,6 @@
 .button {
 	margin: 2px;
-	padding: 15px 32px;
+	padding: 10px 10px;
 	font-size: 16px;
 	text-align: center;
 	border-radius: 2px;
@@ -35,7 +35,7 @@
 	padding: 10px;
 }
 
-#remoteVideo {
-	margin: 2px;
-	padding: 15px 32px;
+#area-2 {
+	margin: 10px;
+	padding: 10px;
 }
